--- a/src/sass/variables/_colors.scss
+++ b/src/sass/variables/_colors.scss
@@ -5,3 +5,5 @@ $secondary-color-strong: #331811;
 $secondary-color-light: #61291c;
 
 $button-secondary-color: #172432;
+
+$footer-color-background: #172432;
