--- a/src/sass/variables/_font-sizes.scss
+++ b/src/sass/variables/_font-sizes.scss
@@ -1,6 +1,9 @@
 $font-size-big: 84px;
 $font-size-section-heading: 64px;
 $font-size-regular-text: 24px;
+$font-size-main-heading: 40px;
+
+$font-size-main-form: 14px;
 
 $font-size-blog-title: 54px;
 
