--- a/src/sass/variables/_styles.scss
+++ b/src/sass/variables/_styles.scss
@@ -2,3 +2,5 @@ $padding-main: 32px;
 $padding-button: 20px 40px;
 $padding-button-arrow: 20px 28px;
 $padding-cards: 24px;
+
+$border-radius-form: 16px;
