add style to main top form

--- a/src/sass/variables/_font-sizes.scss
+++ b/src/sass/variables/_font-sizes.scss
@@ -1,19 +1,19 @@
-$font-size-big: 84px;
-$font-size-section-heading: 64px;
-$font-size-regular-text: 24px;
-$font-size-main-heading: 40px;
+$font-size-big: 84;
+$font-size-section-heading: 64;
+$font-size-regular-text: 24;
+$font-size-main-heading: 40;
 
-$font-size-main-form: 14px;
+$font-size-main-form: 14;
 
-$font-size-blog-title: 54px;
+$font-size-blog-title: 54;
 
-$font-size-card-title: 28px;
-$font-size-card-text: 18px;
+$font-size-card-title: 28;
+$font-size-card-text: 18;
 
-$font-size-button: 20px;
-$font-size-button-book: 36px;
+$font-size-button: 20;
+$font-size-button-book: 36;
 
-$font-size-navbar: 20px;
+$font-size-navbar: 20;
 
-$font-size-book-label: 16px;
-$font-size-book-input: 18px;
+$font-size-book-label: 16;
+$font-size-book-input: 18;
