--- a/src/sass/variables/_colors.scss
+++ b/src/sass/variables/_colors.scss
@@ -1,5 +1,5 @@
 $primary-color-strong: #ff7757;
-$primary-color-light: #ff7757;
+$primary-color-light: #ffd2c7;
 
 $secondary-color-strong: #331811;
 $secondary-color-light: #61291c;
