--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -21,4 +21,8 @@ button {
   border: none;
   color: #fff;
   font-size: 1.7rem;
+  width: 66px;
+  height: 60px;
+  border-radius: 12px;
+  margin: 0 20px 100px 20px;
 }
