--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -13,6 +13,7 @@ body {
 
 ul,
 li {
+  padding: 0;
   margin: 0;
   list-style: none;
 }
@@ -25,4 +26,10 @@ button {
   height: 60px;
   border-radius: 12px;
   margin: 0 20px 100px 20px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  font-style: normal;
 }
