--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -178,8 +178,51 @@ body {
   }
 
   .special-offer {
-    border: 1px solid red;
     width: 100%;
     padding: styles.$padding-main;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: styles.$padding-main;
+    background-color: colors.$footer-color-background;
+    color: #fff;
+
+    & ul {
+      margin-top: 16px;
+    }
+
+    &__heading {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__blocks > li {
+      margin-bottom: 60px;
+
+      .footer-block__links {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+      }
+    }
+
+    .footer-block__title {
+      font-size: font-sizes.$font-size-regular-text;
+      font-weight: bold;
+    }
+
+    .footer-block__social {
+      display: flex;
+      flex-direction: column;
+      gap: 21px;
+
+      & i {
+        margin-right: 29px;
+        font-size: 30px;
+      }
+    }
   }
 }
